# sofamyroom

./: .gitattributes  .gitignore  README.md  demo.m  setup.py  test.py  test_axis_2.py  yprTs2r.m
VAST/: AbsorptionMaterials.m  DemoVAST.m  README.md  VASTinit.m  from_params_to_scene.m  from_scenes_to_rirs.m  load_parameters.m  main.m  shoebox2vertex.m  vast_test_suite.m
VAST/DatasetGeneration/: DemoVAST.m  SphereSampling.m  SubVASTGeneration.m  VASTinit.m  test.m
VAST/LargeRoomData/: GridDistance.txt  ReceiverLoc.txt
VAST/SOFA/: README.md
VAST/SmallRoomData/: CeilingAbsorb.txt  FloorAbsorb.txt  ReceiverLoc.txt  WallsAbsorb.txt
VAST/Tools/: VAST_init.m  VAST_load.m  VAST_merge.m
VAST/database/: hrtf_ci1.sofa  (+1 more)
VAST_old/: from_params_to_scene.m  from_scenes_to_rirs.m  load_parameters.m  main.m  merge_results.m  shoebox2vertex.m
cythonized/: api.py  demo.c  demo.html  demo.pyx  example_usage.py  pysofamyroom.pyx  setup.py  test_utils.py  utils.py
data/: materials.mat  sampleroomsetup.m  sampleroomsetup.txt
dataset_generator/: RIR_generation.m  generate_room_dataset.m  launch_room.m  room_evaluation.m
demo/: demo.m  roomsim.mexw64
docs/: .buildinfo  README.html  doxydoc.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
matlab/: estimateroombreakfreq.m  plotabsorption.m  plotbrir.m  readsetup.m  selectabsorption.m
matlab_helpers/: plotroom.m  sampleroomsetup.m  setcomplexity.m
matlab_mex/: sofamyroom.mexa64
old/: editabsorption.m  make.m  plotabsorption.m  plotcoordsystem.m  readbrir.m  readsetup.m  roomsim.m  roomsim.mexw64  roomsim.sln.lnk  rsound.m  selectabsorption.m  yprTr2s.m
pysofamyroom/: _roomsim.h  api.py  mstruct.h  printer.c  printer.h  pysofamyroom.c  pysofamyroom.html  pysofamyroom.pyx  utils.py
roomsim/: sampleroomsetup.m
roomsim_mod/: make.m  plotroom.m  sampleroomsetup.m
roomsim_mod/source/: CMakeLists.txt  README.md  build.h  main.c  mexmain.c  unittest.c
roomsim_mod/source/libfftw/Windows/Win32/lib/: libfftw3f-3.lib
roomsim_mod/source/libfftw/Windows/x64/lib/: libfftw3f-3.exp
roomsim_mod/source/libfftw/win32/lib/: libfftw3f-3.exp
roomsim_mod/source/libfftw/win64/lib/: desktop.ini  libfftw3l-3.exp
roomsim_mod/source/libfftw/x64/lib/: libfftw3-3.exp  libfftw3f-3.lib
roomsim_mod/source/libmysofa/Win32/lib/: mysofa.lib
roomsim_mod/source/libmysofa/Win32/lib/Debug/: mysofad.lib
roomsim_mod/source/libmysofa/Windows/Win32/lib/Release/: mysofa.lib
roomsim_mod/source/libmysofa/Windows/x64/lib/Release/: mysofa.lib
roomsim_mod/source/libmysofa/x64/lib/: mysofa.lib
roomsim_mod/source/libroomsim/: CMakeLists.txt
roomsim_mod/source/libroomsim/include/: defs.h  dsp.h  global.h  interp.h  mstruct.h  types.h
roomsim_mod/source/libroomsim/source/: roomsim.c  sensor.c
roomsim_mod/source/tinywav/source/: tinywav.c
roomsim_mod/source/vs2008ex/: libroomsim.aps  libroomsim.vcxproj  libroomsim.vcxproj.filters  libsfmt.vcxproj  libsfmt.vcxproj.filters  resource.h  roomsim.sln  roomsim.vcxproj  tinywav.vcxproj  tinywav.vcxproj.filters  wavwriter.vcxproj  wavwriter.vcxproj.filters
roomsim_mod/source/vs2008ex/Debug/: libroomsim.lib  libsfmt.lib
roomsim_mod/source/vs2008ex/x64/Debug/libroomsim.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link-cvtres.read.1.tlog  Lib-link-cvtres.write.1.tlog  Lib.command.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
roomsim_mod/source/vs2008ex/x64/Debug/libsfmt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  libsfmt.lastbuildstate
roomsim_mod/source/vs6/: libroomsim.dsp  libsfmt.dsp
roomsim_mod/source/wavwriter/: CMakeLists.txt
roomsim_mod/source/wavwriter/source/: wavwriter.c
simple_demo/: roomsetup.m
sofamyroom/: PlotSimSetup.m  editabsorption.m  estimateRT60.m  make.m  make32.m  plotcoordsystem.m  plotroom.m  readsetup.m  rsound.m  sampleroomsetup.m
sofamyroom/source/: CMakeLists.txt  README.md  build.c  libroomsim.h  main.c  mexmain.c  unittest.c
sofamyroom/source/Visual Studio/: UpgradeLog.htm  libsfmt.vcproj  roomsim.sln  roomsim.vcxproj.filters  wavwriter.vcxproj
sofamyroom/source/docs/: CMakeLists.txt  Doxyfile.in
sofamyroom/source/docs/sphinx/: conf.py
sofamyroom/source/libfftw/Windows/x64/include/: fftw3.h
sofamyroom/source/libfftw/Windows/x64/lib/: libfftw3-3.lib  libfftw3l-3.lib
sofamyroom/source/libmysofa/Windows/x64/lib/Debug/: libmysofad.lib  mysofad.lib
sofamyroom/source/libmysofa/Windows/x64/lib/Release/: libmysofa.lib  mysofa.lib
sofamyroom/source/libmysofa/source/windows/: libmysofa.vcxproj
sofamyroom/source/libmysofa/source/windows/testApp/: testApp.cpp
sofamyroom/source/libmysofasource/src/: config.h
sofamyroom/source/libmysofasource/windows/: libmysofa.sln
sofamyroom/source/libroomsim/: CMakeLists.txt
sofamyroom/source/libroomsim/include/: 3D.h  dsp.h  interface.h  mem.h  mstruct.h  rng.h  sensor.h  setup.h  types.h
sofamyroom/source/libroomsim/source/: dsp.c  interface.c  interp.c  roomsim.c  sensor.c
sofamyroom/source/libsfmt/: CMakeLists.txt
sofamyroom/source/wavwriter/: CMakeLists.txt
sofamyroom/source/wavwriter/source/: wavwriter.c
source/: mexmain.c
source/wavwriter/: CMakeLists.txt
source/wavwriter/include/: wavwriter.h
src/: CMakeLists.txt  build.h  libroomsim.h  main.c  make.m  mexmain.c  mexmain_multiroom.c  unittest.c
src/docs/doxygen/: Doxyfile.in
src/docs/sphinx/: conf.py  index.rst
src/docsrc/: CMakeLists.txt
src/docsrc/doxygen/: Doxyfile.in
src/docsrc/sphinx/: README.md  conf.py  doxydoc.rst  index.rst
src/docsrc/sphinx/vignettes/: params.rst  params_example  params_test  vast.rst
src/libfftw/Windows/x64/lib/: libfftw3-3.lib
src/libmysofa/Windows/x64/lib/Debug/: libmysofad.lib
src/libmysofa/Windows/x64/lib/Release/: libmysofa.lib
src/libroomsim/include/: global.h  interp.h  msg.h  mstruct.h  roomsim.h  types.h
src/libroomsim/source/: 3D.c  dsp.c  rng.c  roomsim.c  sensor.c  setup.c
src/libsfmt/: CMakeLists.txt
src/wavwriter/source/: wavwriter.c
(+169 files in other folders)
